# NBSeer

./: .gitignore  CLAUDE.md  README.md  TOOLS_INSTALLATION_REPORT.md  environment.yml  install_system_deps.sh  pyproject.toml  setup_env.sh  setup_tools.sh  verify_tools.sh
.claude/: settings.local.json
config/: default.yaml
docs/: augustus_training_guide.md  gene_id_renaming_guide.md  pipeline_integration_guide.md
evm_config/: miniprot_weights.txt
examples/: debug_pipeline_training.sh  pipeline_with_training.sh  simple_training_test.sh
manuscript/: README.md  README_manuscript_data.md  manuscript_data_summary.json  project_timeline.md
manuscript/data_analysis/: README.md  analysis_tasks.md  run_analysis_pipeline.sh
manuscript/data_analysis/accuracy_assessment/: accuracy_assessment_config.json  extract_all_nbs_references.sh  extract_nbs_reference_genes.py  gene_structure_eval.py  nbs_reference_summary.py  rerun_with_pfam_hmm.py
manuscript/data_analysis/benchmark_scripts/: runtime_analysis.py
manuscript/data_analysis/reports/: consolidate_accuracy_results.py  manuscript_data_generator.py
manuscript/data_analysis/results/: analysis_summary.md
manuscript/data_analysis/statistical_analysis/: gene_features_stats.py
manuscript/drafts/: main_manuscript.md
manuscript/figures/: README_manuscript_data.md  figure_specifications.md  manuscript_data_summary.json
manuscript/references/: bibliography.bib  reference_collection_guide.md
manuscript/tables/: Table1_Dataset_Summary.tex
manuscript/tables/formatted/: Table1_Dataset_Summary.csv  Table1_Dataset_Summary.tex
output/: input_validation_report.md
src/: __init__.py
src/nbseer/: __init__.py  augustus_miniprot_trainer.py  augustus_output_parser.py  augustus_predictor.py  augustus_quality_assessor.py  augustus_trainer.py  coordinate_converter.py  data_validation.py  evm_configurator.py  evm_runner.py  evm_segmentation_optimizer.py  gene_id_renamer.py  gff_to_genbank_converter.py  main.py  memory_manager.py  miniprot_result_processor.py  miniprot_runner.py  nlgenome_sweeper.py  nlr_annotator_runner.py  post_evm_renamer.py  species_config.py  test_augustus_training.py  train_augustus_cli.py  training_data_selector.py
src/nbseer/data/: __init__.py  validation.py
src/nbseer/pipeline/: __init__.py  coordinator.py
src/nbseer/tools/: __init__.py  augustus.py  base.py  evm.py  miniprot.py  nlr_annotator.py
src/nbseer/utils/: config.py  exceptions.py  (+1 more)
src/utils/: __init__.py  config.py  data_validation.py  file_io.py  logging_setup.py
tools/evidencemodeler/: ParaFly  VERSION
tools/nlr-annotator/: README.md  VERSION
(+146 files in other folders)
