[project]
name = "nbseer"
version = "0.1.0"
description = "NBSeer: Intelligent Plant NBS Disease Resistance Gene Annotation Tool"
authors = [
    {name = "NBS Annotation Team", email = "nbs@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcbio-gff>=0.7.1",
    "biopython>=1.81",
    "gffutils>=0.13",
    "numpy>=1.24",
    "pandas>=2.0",
    "psutil>=7.0.0",
    "pyyaml>=6.0.2",
    "tqdm>=4.67.1",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.12.0",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
    "scipy>=1.16.0",
    "scikit-learn>=1.7.0",
    "intervaltree>=3.1.0",
]
keywords = ["bioinformatics", "genomics", "gene-annotation", "plant-biology", "NBS-genes"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
"Homepage" = "https://github.com/your-org/nbs-gene-annotation"
"Bug Tracker" = "https://github.com/your-org/nbs-gene-annotation/issues"
"Documentation" = "https://nbs-gene-annotation.readthedocs.io/"

[project.scripts]
nbs-annotate = "nbseer.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/__init__.py"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "TD", "FIX", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["E501", "COM812", "ISC001"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ARG", "FBT"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --disable-warnings"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "external_tools: marks tests that require external tools",
]
